crates/mega-evm/tests/tracers/snapshots/tracers__harness__eth_transfer__call.snap
---
source: crates/mega-evm/tests/tracers/harness.rs
expression: "&traced.call_frame(false)"
---
{
  "from": "0x0000000000000000000000000000000000400000",
  "gas": "0x12d9c8",
  "gasUsed": "0x39788",
  "to": "0x0000000000000000000000000000000000400001",
  "input": "0x",
  "value": "0x1",
  "type": "CALL"
}
