crates/mega-evm/tests/tracers/snapshots/tracers__harness__eth_transfer__call_with_log.snap
---
source: crates/mega-evm/tests/tracers/harness.rs
expression: "&traced.call_frame(true)"
---
{
  "from": "0x0000000000000000000000000000000000400000",
  "gas": "0x12d9c8",
  "gasUsed": "0x39788",
  "to": "0x0000000000000000000000000000000000400001",
  "input": "0x",
  "logs": [
    {
      "address": "0xfffffffffffffffffffffffffffffffffffffffe",
      "topics": [
        "0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef",
        "0x0000000000000000000000000000000000000000000000000000000000400000",
        "0x0000000000000000000000000000000000000000000000000000000000400001"
      ],
      "data": "0x0000000000000000000000000000000000000000000000000000000000000001",
      "position": "0x0",
      "index": "0x0"
    }
  ],
  "value": "0x1",
  "type": "CALL"
}
