crates/mega-evm/tests/tracers/snapshots/tracers__harness__eth_transfer__prestate.snap
---
source: crates/mega-evm/tests/tracers/harness.rs
expression: "&traced.prestate(false)"
---
{
  "0x0000000000000000000000000000000000000000": {
    "balance": "0x0"
  },
  "0x0000000000000000000000000000000000400000": {
    "balance": "0x38d7ea4c68000"
  },
  "0x0000000000000000000000000000000000400001": {
    "balance": "0x0"
  },
  "0x4200000000000000000000000000000000000019": {
    "balance": "0x0"
  },
  "0x420000000000000000000000000000000000001a": {
    "balance": "0x0"
  },
  "0x420000000000000000000000000000000000001b": {
    "balance": "0x0"
  }
}
