crates/mega-evm/tests/tracers/snapshots/tracers__harness__eth_transfer__prestate_diff.snap
---
source: crates/mega-evm/tests/tracers/harness.rs
expression: "&traced.prestate(true)"
---
{
  "post": {
    "0x0000000000000000000000000000000000400000": {
      "balance": "0x38d7ea4c67fff",
      "nonce": 1
    },
    "0x0000000000000000000000000000000000400001": {
      "balance": "0x1"
    }
  },
  "pre": {
    "0x0000000000000000000000000000000000400000": {
      "balance": "0x38d7ea4c68000"
    },
    "0x0000000000000000000000000000000000400001": {
      "balance": "0x0"
    }
  }
}
