crates/mega-evm/tests/tracers/snapshots/tracers__harness__eth_transfer__struct_logs.snap
---
source: crates/mega-evm/tests/tracers/harness.rs
expression: "&traced.struct_logs()"
---
{
  "failed": false,
  "gas": 235400,
  "returnValue": "0x",
  "structLogs": []
}
